[gd_scene load_steps=5 format=3 uid="uid://bl4otsd4swfcr"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_kg5pu"]

[sub_resource type="CanvasTexture" id="CanvasTexture_r3scr"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ugpig"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ms1tw"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_kg5pu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="CanvasLayer"]
offset_left = 537.0
offset_top = 15.0
offset_right = 613.0
offset_bottom = 49.0
text = "Battle"

[node name="NextButton" type="Button" parent="CanvasLayer"]
offset_left = 978.0
offset_top = 597.0
offset_right = 1128.0
offset_bottom = 642.0
text = "Next"

[node name="TeamATextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 55.0
offset_top = 307.0
offset_right = 263.0
offset_bottom = 569.0
texture = SubResource("CanvasTexture_r3scr")

[node name="Label" type="Label" parent="CanvasLayer/TeamATextureRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 271.0
offset_right = 141.0
offset_bottom = 304.0
text = "Team A"

[node name="SpeechBubbleTextureRect" type="TextureRect" parent="CanvasLayer/TeamATextureRect"]
layout_mode = 0
offset_left = 178.0
offset_top = -121.0
offset_right = 277.0
offset_bottom = -10.0
texture = SubResource("CanvasTexture_ugpig")

[node name="TeamBTextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 893.0
offset_top = 301.0
offset_right = 1101.0
offset_bottom = 563.0
texture = SubResource("CanvasTexture_ms1tw")

[node name="Label" type="Label" parent="CanvasLayer/TeamBTextureRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 271.0
offset_right = 141.0
offset_bottom = 304.0
text = "Team B"

[node name="SpeechBubbleTextureRect" type="TextureRect" parent="CanvasLayer/TeamBTextureRect"]
layout_mode = 0
offset_left = -77.0
offset_top = -118.0
offset_right = 22.0
offset_bottom = -7.0
texture = SubResource("CanvasTexture_ugpig")

[node name="DecibelOmeterTextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 510.0
offset_top = 73.0
offset_right = 626.0
offset_bottom = 576.0
texture = SubResource("CanvasTexture_ms1tw")

[node name="Label" type="Label" parent="CanvasLayer/DecibelOmeterTextureRect2"]
layout_mode = 0
offset_left = -3.0
offset_top = 513.0
offset_right = 124.0
offset_bottom = 546.0
text = "Decibel-O-meter"

[connection signal="pressed" from="CanvasLayer/NextButton" to="." method="_on_next_button_pressed"]
